--- a/.github/workflows/run_crawlers.yaml
+++ b/.github/workflows/run_crawlers.yaml
@@ -1,51 +1,30 @@
-name: Run Crawlers on Schedule
+name: Run Crawlers
 
 on:
+  workflow_dispatch:   # Cho phép chạy tay trong tab Actions
   schedule:
-    - cron: '0 17 * * *'  # 0h VN
-    - cron: '0 23 * * *'  # 6h VN
-    - cron: '0 5 * * *'   # 12h VN
-    - cron: '0 11 * * *'  # 18h VN
-    - cron: '0 15 * * *'  # 22h VN
-  workflow_dispatch:      # cho phép chạy thủ công
-
-permissions:
-  contents: write   # ✅ cho phép commit file CSV
+    - cron: "0 0 * * *"   # Hoặc hẹn giờ (tuỳ chọn)
 
 jobs:
-  run-crawlers:
+  run:
     runs-on: ubuntu-latest
+
     env:
       YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0   # ✅ để pull đầy đủ lịch sử (cần cho append)
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pandas google-api-python-client
+      - name: Install dependencies
+        run: pip install google-api-python-client pandas
 
-    - name: Run non-trending crawler
-      run: python crawl_non_trending.py
-
-    - name: Run trending crawler
-      run: python crawl_trending.py
-
-    - name: Commit & Push CSV results
-      uses: EndBug/add-and-commit@v9
-      with:
-        author_name: github-actions
-        author_email: actions@github.com
-        message: "Update CSV data [skip ci]"
-        add: |
-          youtube_trending.csv
-          youtube_non_trending.csv
+      - name: Run crawlers
+        run: |
+          python crawl_trending.py
+          python crawl_non_trending.py
