--- a/.github/workflows/run_crawlers.yaml
+++ b/.github/workflows/run_crawlers.yaml
@@ -25,7 +25,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install google-api-python-client pandas
+        run: pip install google-api-python-client pandas isodate
 
       - name: Run crawlers
         run: |
