--- a/.github/workflows/run_crawlers.yaml
+++ b/.github/workflows/run_crawlers.yaml
@@ -1,1 +1,54 @@
+name: Run Crawlers
 
+on:
+  workflow_dispatch:   # Cho phép chạy thủ công
+  schedule:
+    - cron: "0 0,6,12,18 * * *"   # chạy 0h, 6h, 12h, 18h UTC mỗi ngày
+
+jobs:
+  run:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write   # Cho phép push vào repo
+
+    env:
+      YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install google-api-python-client pandas isodate
+
+      - name: Run crawlers
+        run: |
+          python crawl_trending.py
+          python crawl_non_trending.py
+
+      - name: Commit CSV results
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add youtube_trending.csv youtube_non_trending.csv
+          git commit -m "Update CSV results on $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git push origin HEAD:${{ github.ref }}
+
+      - name: Set timestamp
+        id: vars
+        run: echo "ts=$(date +'%Y-%m-%d_%H-%M')" >> $GITHUB_OUTPUT
+
+      - name: Upload CSV results
+        uses: actions/upload-artifact@v4
+        with:
+          name: youtube-data-${{ steps.vars.outputs.ts }}
+          path: |
+            youtube_trending.csv
+            youtube_non_trending.csv
+          retention-days: 7   # giữ artifact 7 ngày
