--- a/.github/workflows/run_comments_crawler.yaml
+++ b/.github/workflows/run_comments_crawler.yaml
@@ -46,4 +46,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add comments.csv crawled_videos.csv
           git commit -m "Update crawled data [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }} HEAD:main
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/bgamer020/crawling.git HEAD:main
+
